# JSON_RPC

./: README.md
Client/: CMakeLists.txt  main.cpp
Server/: CMakeLists.txt  XML_1C_integration.cpp  XML_1C_integration.h  db_helpers.cpp  db_helpers.h  main.cpp  request_handler.cpp  request_handler.h
